src/test/compile-fail/import3.rs
// error-pattern: unresolved modulename
import main::bar;

fn main(args: [str]) { #debug("foo"); }
